--- a/openmrs-client/src/main/res/values/strings.xml
+++ b/openmrs-client/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
   -->
 
 <resources>
-    <string name="app_name">OpenMRS Client</string>
+    <string name="app_name">eTB</string>
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
     <string name="action_location">Location</string>
